--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,8 @@ book:
       chapters:
         - data_ffiec.qmd
         - data_banks.qmd
-        - data_partners.qmd                
+        - data_partners.qmd 
+        - data_fed.qmd               
     - part: "Models"      
 bibliography: references.bib
 
